fixed  alignment

--- a/src/view/BlockprobeSettings/BlockprobeSettings.css
+++ b/src/view/BlockprobeSettings/BlockprobeSettings.css
@@ -29,6 +29,7 @@
     flex-direction:row;
     margin-top:0.2em;
     height:auto;
+    margin-bottom: 2.5em;
 }
 
 .messageUserTextGeneral{
@@ -42,4 +43,20 @@
 .userListContainer{
     width:100%;
     word-wrap: break-word;
+}
+
+@media only screen and (max-width: 600px) {
+    .settings-textfield-container{
+        width:80%; 
+        height:auto; 
+        margin-right: 1.5em;
+    }
+}
+
+@media only screen and (min-width: 601px) {
+    .settings-textfield-container{
+        width:35%; 
+        height:auto; 
+        margin-right: 1.5em;
+    }
 }
